--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "engines": {
     "node": "8.9.4"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "react-dots-loader": "^1.1.4"
   }
 }
